(Finally) Added content to timeline

--- a/founder.html
+++ b/founder.html
@@ -50,41 +50,66 @@
     </div>  
 
     <main>
-        <article class="ett slide">
-            Hejsvejs
-        </article>
-        <article class="light slide">
-            <p class="topLeft">Wayne Enterprises has its roots in the 17th century as a merchant house started by the borther Judge Solomon Wayne and Joshua Wayne.</p>
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quo eos consectetur corporis quisquam, et vitae amet ipsa est labore possimus reiciendis quam nam maxime numquam aut beatae ullam ex quos? YALLAH
-        </article>
-        <article class="dark slide">
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quo eos consectetur corporis quisquam, et vitae amet ipsa est labore possimus reiciendis quam nam maxime numquam aut beatae ullam ex quos?
+        <article class="ett slide gray">
+            <h1 class="topLeft">Welcome to the history of Wayne Enterprises.</h1>
+            <p class="midLeft"> It all began in the late 1700th century as a merchant house owned by the brothers Judge Solomon Wayne and Joshua Wayne. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nobis molestiae perspiciatis dolore excepturi eaque accusamus nulla quod dolorem doloribus architecto. Nam fugiat nulla magni beatae possimus eum, nihil nobis sunt!</p>
+            <p class="right ySpan3 column"><img src="pics/solomon.jpg" alt=""> Judge Solomon Wayne.</p>
+            <p class="botLeft">With the fortune earned, Judge Wayne hired Cyrus Pinkney who would construct Gotham City.</p>
+        
         </article>
 
-        <footer class= "slide">
-            <div>Wayne Enterprises is the company for you</div>
-            <div>You can find our offices at various locations around the world. Click <i>here</i> to find one near you!</div>
-            <ul>
-                <li>
-                    <a href="index.html">Home</a>
-                </li>
-                <li>
-                    About
-                </li>
-                <li>
-                    Business
-                </li>
-                <li>
-                    Careers
-                </li>
-                <li>
-                    Contact
-                </li>
-                <li>
-                    Privacy
-                </li>
-            </ul>
-        </footer>
+        <article class="light slide">
+            <p class="topLeft">The son of Judge Wayne - Alan Wayne - took over the company in the early 1900th century and offically made it a corporate company. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Explicabo voluptatem, dolores vero quas libero ipsum possimus iure nihil maxime esse itaque dolorum rerum et, animi ea ab voluptatum quis odio.</p>
+            <p class="topMid column unsaturate"><img src="pics/alan.jpg" alt="">Alan Wayne</p>
+            <p class="botRight">With Alan as the leader of the company, Wayne Enterprises opened up many new subdivisions as Wayne Shipping, Wayne Chemical, and Wayne Manufacturing.</p>
+        </article>
+            
+        <article class="dark slide">
+            <p class="top middle ySpan3">During early 2000th century Wayne Enterprises started focusing on being enviornmentally friendly under the reign of Patrick and Laura Wayne. Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut distinctio perferendis laudantium necessitatibus iste quisquam, dolor consequuntur placeat, fugit tenetur, inventore deserunt quia. Labore libero unde qui? Quis, asperiores amet. Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi error et eum quisquam laborum provident nemo facere accusantium fuga. Nobis ab laudantium omnis alias error nisi quod! Nobis, perferendis veritatis!</p>
+            <p class="left ySpan3 column"><img src="pics/patrick.jpg" alt="">Patrick Wayne</p>
+            <p class="right ySpan3 column"><img src="pics/laura.jpg" alt="">Laura Wayne</p>
+        </article>
+
+        <article class="light slide">
+            <h2 class="middle top">
+                The modern incarnation of Wayne Enterprises
+            </h2>
+            <p class="mid left">Before the tragic passing of Thomas and Martha Wayne, Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit praesentium qui aut cupiditate, libero iure temporibus perferendis pariatur non voluptatibus animi dolorum architecto numquam quaerat eaque cum in nulla harum?</p>
+            <p class="mid middle">After Bruce Wayne took helm of the company ten years ago, Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis, doloribus. Perferendis consequuntur soluta eos accusantium, unde quia est beatae natus. Pariatur in voluptates architecto fuga ipsum cum repellat dolorum reprehenderit?</p>
+            <p class="mid right">Wayne Enterprises has long been and still remains a global powerhouse. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis ipsum animi sunt molestiae, iusto ex et, similique dolorem expedita dolore aperiam quam ad, velit optio magni reprehenderit ipsa corrupti a?</p>
+        </article>
+
+
+        <article class="gray slide">
+            <p class="left top">
+                This timeline was made in collaboration with the Gotham Museum of History. For more information, visit <a href="404.html">gotham.museum.gov</a>
+            </p>
+            <p class="mid right">Reference: <a href="http://www.akita.co.uk/computing-history/">http://www.akita.co.uk/computing-history/</a></p>
+            <footer class="bot xSpan3">
+                <div>Wayne Enterprises is the company for you</div>
+                <div>You can find our offices at various locations around the world. Click <i>here</i> to find one near you!</div>
+                <ul>
+                    <li>
+                        <a href="index.html">Home</a>
+                    </li>
+                    <li>
+                        About
+                    </li>
+                    <li>
+                        Business
+                    </li>
+                    <li>
+                        Careers
+                    </li>
+                    <li>
+                        Contact
+                    </li>
+                    <li>
+                        Privacy
+                    </li>
+                </ul>
+            </footer>
+        </article>
     </main>
 
 
