Worked on layout. Added navbar for mobile. Added joblistings

--- a/founder.html
+++ b/founder.html
@@ -52,6 +52,7 @@
     <main>
         <article class="ett slide gray">
             <h1 class="topLeft">Welcome to the history of Wayne Enterprises.</h1>
+            <p class="top middle">Scroll to view the other slides</p>
             <p class="midLeft"> It all began in the late 1700th century as a merchant house owned by the brothers Judge Solomon Wayne and Joshua Wayne. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nobis molestiae perspiciatis dolore excepturi eaque accusamus nulla quod dolorem doloribus architecto. Nam fugiat nulla magni beatae possimus eum, nihil nobis sunt!</p>
             <p class="right ySpan3 column"><img src="pics/solomon.jpg" alt=""> Judge Solomon Wayne.</p>
             <p class="botLeft">With the fortune earned, Judge Wayne hired Cyrus Pinkney who would construct Gotham City.</p>
