--- a/goals.html
+++ b/goals.html
@@ -11,6 +11,39 @@
     <script src="https://kit.fontawesome.com/81c14f1bdd.js" crossorigin="anonymous" defer></script>
 </head>
 <body>
+    <aside class="navHållare"><!--Denna navbar syns endast när skärmen är i mobilstorlek-->
+        <div class="coverUp"><i class="fas fa-bars"></i></div>
+    
+        <nav class="sekundärNav">
+            <div class="navItemF">
+                <div class="navTitle">
+                    <a href="index.html">Home</a>
+                </div>
+            </div>
+
+            <div class="navItemF">
+                <div class="navTitle">
+                    About <i class="fas fa-angle-double-down"></i>
+                </div> 
+                <ul class="aboutList">
+                    <li><a href="founder.html">Our founders</a></li>
+                    <li><a href="ceo.html">Our CEO</a></li>
+                    <li><a href="goals.html">Our goals</a></li>
+                </ul>
+            </div>
+
+            <div class="navItemF">
+                <div class="navTitle">
+                    Business <i class="fas fa-angle-double-down"></i>
+                </div> 
+                <ul class="aboutList">
+                    <li><a href="businesses.html">The Wayne Enterprise Family</a></li>
+                    <li><a href="joblistings.html">Join us</a></li>
+                </ul>
+            </div>
+        </nav>
+    </aside> 
+<div class="body">
     <img src="pics/cityBackground.jpg" alt="" class="background">
 
     <div class="background" id="mellan">hejsvejs</div>
@@ -118,5 +151,6 @@
             </li>
         </ul>
     </footer>
+</div>
 </body>
 </html>
