--- a/joblistings.html
+++ b/joblistings.html
@@ -11,6 +11,42 @@
     <script src="https://kit.fontawesome.com/81c14f1bdd.js" crossorigin="anonymous" defer></script>
 </head>
 <body>
+
+    <aside class="navHållare"><!--Denna navbar syns endast när skärmen är i mobilstorlek-->
+        <div class="coverUp"><i class="fas fa-bars"></i></div>
+        <img src="pics/logga2.png" class="navLogga" alt="">
+        <nav class="sekundärNav">
+            <div class="navItemF">
+                <div class="navTitle">
+                    <a href="index.html">Home</a>
+                </div>
+            </div>
+
+            <div class="navItemF">
+                <div class="navTitle">
+                    About <i class="fas fa-angle-double-down"></i>
+                </div> 
+                <ul class="aboutList">
+                    <li><a href="founder.html">Our founders</a></li>
+                    <li><a href="ceo.html">Our CEO</a></li>
+                    <li><a href="goals.html">Our goals</a></li>
+                </ul>
+            </div>
+
+            <div class="navItemF">
+                <div class="navTitle">
+                    Business <i class="fas fa-angle-double-down"></i>
+                </div> 
+                <ul class="aboutList">
+                    <li><a href="businesses.html">The Wayne Enterprise Family</a></li>
+                    <li><a href="joblistings.html">Join us</a></li>
+                </ul>
+            </div>
+        </nav>
+    </aside> 
+    <div class="body">
+
+
     <img src="pics/cityBackground.jpg" alt="" class="background">
 
     
@@ -53,8 +89,36 @@
         </div>
     </nav>
 
-    <main>
+     
 
+    <main>
+<section class="midLeft light"><h2>We here at Wayne Enterprises are always looking for new talent, are you the one we're looking for?</h2>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid numquam tempore tempora. Fugit deserunt neque, itaque facilis consequatur pariatur officiis ab rerum nemo minus dolore libero tempora alias unde cupiditate.
+    </p></section>
+<section class="midRight dark row image"><p class="citat">"I love Wayne Enterprises" - Cooldude McGee</p><img src="pics/employee1.jpg" alt=""></section>
+<section class="midLeft gray"><h3>Take a look at what positions we're currently looking to fill:</h3></section>
+<ul class="joblistings mid">
+    <li><a href="404.html">Project Management Assistant</a></li>
+    <li><a href="404.html">Unified Systems Operator - Columbia, MO</a></li>
+    <li><a href="404.html">Research Scientist / AI Accelerators</a></li>
+    <li><a href="404.html">Financial Analyst- Rochester, MN</a></li>
+    <li><a href="404.html">Systems Administrator-IMI Distrubuted Systems Support</a></li>
+    <li><a href="404.html">Help Desk Support Specialist - Chambersburg, PA</a></li>
+    <li><a href="404.html">Entry Level Associate Technical Specialist: Application Administrator</a></li>
+    <li><a href="404.html">Entry Level Associate Developer: Application Developer</a></li>
+    <li><a href="404.html">Research Software Engineer, Artificial Intelligence</a></li>
+    <li><a href="404.html">Software Engineer, Artificial Intelligence</a></li>
+    <li><a href="404.html">Customer Engagement Specialist</a></li>
+    <li><a href="404.html">Intellectual Property Legal Assistant - Endicott, NY</a></li>
+    <li><a href="404.html">Intellectual Property Legal Assistant - Fishkill, NY</a></li>
+    <li><a href="404.html">Associate Developer - Bluewolf</a></li>
+    <li><a href="404.html">Data Platform Engineer</a></li>
+    <li><a href="404.html">Technical Operations Analyst - Scheduler Operator</a></li>
+    <li><a href="404.html">Research Staff Member, Artificial Intelligence</a></li>
+    <li><a href="404.html">Entry Level Pega Developer</a></li>
+    <li><a href="404.html">Unified Systems Operator - Columbia, MO</a></li>
+    <li><a href="404.html">Software Engineer, Artificial Intelligence</a></li>
+</ul>
     </main>
 
     <footer>
@@ -81,5 +145,6 @@
             </li>
         </ul>
     </footer>
+</div>
 </body>
 </html>
