Started working on fixing the background. Tweaked mobile navbar.

--- a/joblistings.html
+++ b/joblistings.html
@@ -14,7 +14,7 @@
 
     <aside class="navHållare"><!--Denna navbar syns endast när skärmen är i mobilstorlek-->
         <div class="coverUp"><i class="fas fa-bars"></i></div>
-        <img src="pics/logga2.png" class="navLogga" alt="">
+        <div class="navLogga"><img src="pics/logga2.png" alt=""></div>
         <nav class="sekundärNav">
             <div class="navItemF">
                 <div class="navTitle">
@@ -24,7 +24,7 @@
 
             <div class="navItemF">
                 <div class="navTitle">
-                    About <i class="fas fa-angle-double-down"></i>
+                    About
                 </div> 
                 <ul class="aboutList">
                     <li><a href="founder.html">Our founders</a></li>
@@ -35,7 +35,7 @@
 
             <div class="navItemF">
                 <div class="navTitle">
-                    Business <i class="fas fa-angle-double-down"></i>
+                    Business
                 </div> 
                 <ul class="aboutList">
                     <li><a href="businesses.html">The Wayne Enterprise Family</a></li>
@@ -46,11 +46,9 @@
     </aside> 
     <div class="body">
 
-
-    <img src="pics/cityBackground.jpg" alt="" class="background">
-
-    
-    <div class="background" id="mellan"></div>
+    <div class="mellan background">
+        <img src="pics/cityBackground.jpg" alt="" class="background">
+    </div>
     
     <header>
         <img src="pics/logga2.png" alt="">
