Worked on footer, finished(?) background, finsihed (???) timeline

--- a/joblistings.html
+++ b/joblistings.html
@@ -44,12 +44,23 @@
             </div>
         </nav>
     </aside> 
+
+
+
     <div class="body">
 
-    <div class="mellan background">
-        <img src="pics/cityBackground.jpg" alt="" class="background">
-    </div>
+
+
+
+        <div class="mellan background">
+            <img src="pics/cityBackground.jpg" alt="" >
+        </div>
     
+
+
+
+
+
     <header>
         <img src="pics/logga2.png" alt="">
         <div>
