--- a/businesses.html
+++ b/businesses.html
@@ -46,10 +46,9 @@
         </nav>
     </aside> 
 <div class="body">
-    <img src="pics/cityBackground.jpg" alt="" class="background">
-
-    
-    <div class="background" id="mellan">hejsvejs</div>
+    <div class="mellan background">
+        <img src="pics/cityBackground.jpg" alt="" >
+    </div>
     
     <header>
         <img src="pics/logga2.png" alt="">
