--- a/ceo.html
+++ b/ceo.html
@@ -44,10 +44,9 @@
         </nav>
     </aside> 
 <div class="body">
-    <img src="pics/cityBackground.jpg" alt="" class="background">
-
-    
-    <div class="background" id="mellan"></div>
+    <div class="mellan background">
+        <img src="pics/cityBackground.jpg" alt="" >
+    </div>
     
     <header>
         <img src="pics/logga2.png" alt="">
