--- a/goals.html
+++ b/goals.html
@@ -44,9 +44,9 @@
         </nav>
     </aside> 
 <div class="body">
-    <img src="pics/cityBackground.jpg" alt="" class="background">
-
-    <div class="background" id="mellan">hejsvejs</div>
+    <div class="mellan background">
+        <img src="pics/cityBackground.jpg" alt="" >
+    </div>
     
     <header>
         <img src="pics/logga2.png" alt="">
