--- a/joblistings.html
+++ b/joblistings.html
@@ -131,28 +131,38 @@
     </main>
 
     <footer>
-        <div>Wayne Enterprises is the company for you</div>
-        <div>You can find our offices at various locations around the world. Click <i>here</i> to find one near you!</div>
-        <ul>
-            <li>
-                <a href="index.html">Home</a>
-            </li>
-            <li>
-               <a href="404.html">About</a> 
-            </li>
-            <li>
-                Business
-            </li>
-            <li>
-                Careers
-            </li>
-            <li>
-                Contact
-            </li>
-            <li>
-                Privacy
-            </li>
-        </ul>
+        <p>Wayne Enterprises is the company for you</p>
+        <p>You can find our offices at various locations around the world. Click <i>here</i> to find one near you!</p>
+        <div class="row" id="footerList">
+            <ul>
+                <li>
+                    <a href="index.html">Home</a>
+                </li>
+                <li id="about">
+                    About  >
+                </li>
+                <li id="business">
+                    Business >
+                </li>
+                <li>
+                    <a href="joblistings.html">Careers</a> 
+                </li>
+                <li>
+                    <a href="404.html">Contact</a> 
+                </li>
+                <li>
+                    <a href="404.html">Privacy</a>  
+                </li>
+            </ul>
+        </div>
+        <div id="länkRuta">
+            <ul>
+                <li><a href=""></a></li>
+                <li><a href=""></a></li>
+                <li><a href=""></a></li>
+            </ul>
+        </div>
+        <img src="pics/logga2.png" alt="">
     </footer>
 </div>
 </body>
