--- a/founder.html
+++ b/founder.html
@@ -12,14 +12,12 @@
     <script src="https://kit.fontawesome.com/81c14f1bdd.js" crossorigin="anonymous" defer></script>
 </head>
 <body>
-    <img src="pics/cityBackground.jpg" alt="" class="background">
 
-            <img src="pics/logga2.png" class="ikon" alt="">
-
-
-        <div class="navHållare">
-            <div class="coverUp"><i class="fas fa-bars"></i></div>
-            <nav>
+    <aside class="navHållare"><!--Denna navbar syns endast när skärmen är i mobilstorlek-->
+        <div class="coverUp"><i class="fas fa-bars"></i></div>
+    
+        <nav class="sekundärNav">
+            <img src="pics/logga2.png" alt="">
             <div class="navItemF">
                 <div class="navTitle">
                     <a href="index.html">Home</a>
@@ -42,12 +40,20 @@
                     Business <i class="fas fa-angle-double-down"></i>
                 </div> 
                 <ul class="aboutList">
-                    <li><a href="businesses.html">The Wayne Enterprise Family</a></li>
+                    <li><a href="businesses.html">The Wayne E. Family</a></li>
                     <li><a href="joblistings.html">Join us</a></li>
                 </ul>
             </div>
         </nav>
-    </div>  
+    </aside> 
+    
+
+    <img src="pics/cityBackground.jpg" alt="" class="background">
+
+            <img src="pics/logga2.png" class="ikon" alt="">
+
+
+
 
     <main>
         <article class="ett slide gray">
@@ -87,28 +93,38 @@
             </p>
             <p class="mid right">Reference: <a href="http://www.akita.co.uk/computing-history/">http://www.akita.co.uk/computing-history/</a></p>
             <footer class="bot xSpan3">
-                <div>Wayne Enterprises is the company for you</div>
-                <div>You can find our offices at various locations around the world. Click <i>here</i> to find one near you!</div>
-                <ul>
-                    <li>
-                        <a href="index.html">Home</a>
-                    </li>
-                    <li>
-                        About
-                    </li>
-                    <li>
-                        Business
-                    </li>
-                    <li>
-                        Careers
-                    </li>
-                    <li>
-                        Contact
-                    </li>
-                    <li>
-                        Privacy
-                    </li>
-                </ul>
+                <p>Wayne Enterprises is the company for you</p>
+                <p>You can find our offices at various locations around the world. Click <i>here</i> to find one near you!</p>
+                <div class="row" id="footerList">
+                    <ul>
+                        <li>
+                            <a href="index.html">Home</a>
+                        </li>
+                        <li id="about">
+                            About  >
+                        </li>
+                        <li id="business">
+                            Business >
+                        </li>
+                        <li>
+                            <a href="joblistings.html">Careers</a> 
+                        </li>
+                        <li>
+                            <a href="404.html">Contact</a> 
+                        </li>
+                        <li>
+                            <a href="404.html">Privacy</a>  
+                        </li>
+                    </ul>
+                </div>
+                <div id="länkRuta">
+                    <ul>
+                        <li><a href=""></a></li>
+                        <li><a href=""></a></li>
+                        <li><a href=""></a></li>
+                    </ul>
+                </div>
+                <img src="pics/logga2.png" alt="">
             </footer>
         </article>
     </main>
