--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <div class="coverUp"><i class="fas fa-bars"></i></div>
     
         <nav class="sekundärNav">
+            <img src="pics/logga2.png" alt="">
             <div class="navItemF">
                 <div class="navTitle">
                     <a href="index.html">Home</a>
@@ -124,35 +125,30 @@
                     <a href="index.html">Home</a>
                 </li>
                 <li id="about">
-                    About  <i class="fas fa-angle-double-right"></i>
+                    About  >
                 </li>
                 <li id="business">
-                    Business <i class="fas fa-angle-double-right"></i>
+                    Business >
                 </li>
                 <li>
-                    Careers
+                    <a href="joblistings.html">Careers</a> 
                 </li>
                 <li>
-                    Contact
+                    <a href="404.html">Contact</a> 
                 </li>
                 <li>
-                    Privacy
+                    <a href="404.html">Privacy</a>  
                 </li>
             </ul>
-            <div class="foldOut">
-                <ul>
-                    <li><a href="founder.html">Our founders</a></li>
-                    <li><a href="ceo.html">Our CEO</a></li>
-                    <li><a href="goals.html">Our goals</a></li>
-                </ul>
-            </div>
-            <div class="foldOut">
-                <ul>
-                    <li><a href="businesses.html">The Wayne Enterprise Family</a></li>
-                    <li><a href="joblistings.html">Join us</a></li>
-                </ul>
-            </div>
         </div>
+        <div id="länkRuta">
+            <ul>
+                <li><a href=""></a></li>
+                <li><a href=""></a></li>
+                <li><a href=""></a></li>
+            </ul>
+        </div>
+        <img src="pics/logga2.png" alt="">
     </footer>
 
 
