--- a/ceo.html
+++ b/ceo.html
@@ -15,6 +15,7 @@
         <div class="coverUp"><i class="fas fa-bars"></i></div>
     
         <nav class="sekundärNav">
+            <img src="pics/logga2.png" alt="Wayne Enterprise's logo">
             <div class="navItemF">
                 <div class="navTitle">
                     <a href="index.html">Home</a>
@@ -37,7 +38,7 @@
                     Business <i class="fas fa-angle-double-down"></i>
                 </div> 
                 <ul class="aboutList">
-                    <li><a href="businesses.html">The Wayne Enterprise Family</a></li>
+                    <li><a href="businesses.html">The Wayne E. Family</a></li>
                     <li><a href="joblistings.html">Join us</a></li>
                 </ul>
             </div>
@@ -45,11 +46,11 @@
     </aside> 
 <div class="body">
     <div class="mellan background">
-        <img src="pics/cityBackground.jpg" alt="" >
+        <img src="pics/cityBackground.jpg" alt="Background">
     </div>
     
     <header>
-        <img src="pics/logga2.png" alt="">
+        <img src="pics/logga2.png" alt="Wayne Enterprise's logo">
         <div>
             <h1>Wayne Enterprises</h1>
             <h3>The future is built as one</h3>
@@ -92,14 +93,14 @@
             Our company is lead by Bruce Wayne: Genius, billionare, playboy, and philatropist. Bruce Wayne has been the leader of Wayne Enterprises for many years, and every year since has been one of success and progress. 
             Lorem ipsum dolor sit, amet consectetur adipisicing elit. Autem officiis blanditiis adipisci? Doloribus voluptas facere soluta fugit quidem a necessitatibus dicta, maxime vero accusantium nobis ut magni minus deleniti nulla!</section>
         <section class="light right image">
-            <img src="pics/bruce1.jpg" alt="" class="bruce">
+            <img src="pics/bruce1.jpg" alt="Modern photo of Bruce Wayne" class="bruce">
         </section>
         <section class="dark fill multiple">
             <h3>From a young age, Bruce Wayne had to carry the burden of leadership. Though it was though, his resolve never faltered, and under his leadership Wayne Enterprises has reached new heights</h3>
-            <img src="pics/bruce3.jpg" alt="">
+            <img src="pics/bruce3.jpg" alt="Bruce Wayne as a child">
         </section>
         <section class="gray midLeft image">
-            <img src="pics/bruce5.jpg" alt="">
+            <img src="pics/bruce5.jpg" alt="Bruce Wayne when he returned to Gotham">
         </section>
         <section class="gray right">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Id eos dolorem eum deleniti similique esse officia provident tempore quos. Ratione asperiores corrupti tempore cumque, laboriosam ducimus libero quaerat suscipit veniam. Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus voluptatibus accusamus hic dolore ut aliquid quos illum assumenda eum aliquam reprehenderit sequi exercitationem minus, excepturi dolores ipsam voluptas, veritatis suscipit.
@@ -138,7 +139,7 @@
                 <li><a href=""></a></li>
             </ul>
         </div>
-        <img src="pics/logga2.png" alt="">
+        <img src="pics/logga2.png" alt="Wayne Enterprise's logo">
     </footer>
 </div>
 </body>
