--- a/joblistings.html
+++ b/joblistings.html
@@ -14,8 +14,9 @@
 
     <aside class="navHållare"><!--Denna navbar syns endast när skärmen är i mobilstorlek-->
         <div class="coverUp"><i class="fas fa-bars"></i></div>
-        <div class="navLogga"><img src="pics/logga2.png" alt=""></div>
+    
         <nav class="sekundärNav">
+            <img src="pics/logga2.png" alt="Wayne Enterprise's logo">
             <div class="navItemF">
                 <div class="navTitle">
                     <a href="index.html">Home</a>
@@ -24,7 +25,7 @@
 
             <div class="navItemF">
                 <div class="navTitle">
-                    About
+                    About <i class="fas fa-angle-double-down"></i>
                 </div> 
                 <ul class="aboutList">
                     <li><a href="founder.html">Our founders</a></li>
@@ -35,7 +36,7 @@
 
             <div class="navItemF">
                 <div class="navTitle">
-                    Business
+                    Business <i class="fas fa-angle-double-down"></i>
                 </div> 
                 <ul class="aboutList">
                     <li><a href="businesses.html">The Wayne Enterprise Family</a></li>
@@ -49,20 +50,13 @@
 
     <div class="body">
 
-
-
-
         <div class="mellan background">
-            <img src="pics/cityBackground.jpg" alt="" >
+            <img src="pics/cityBackground.jpg" alt="Background">
         </div>
     
 
-
-
-
-
     <header>
-        <img src="pics/logga2.png" alt="">
+        <img src="pics/logga2.png" alt="Wayne Enterprise's logo">
         <div>
             <h1>Wayne Enterprises</h1>
             <h3>The future is built as one</h3>
@@ -162,7 +156,7 @@
                 <li><a href=""></a></li>
             </ul>
         </div>
-        <img src="pics/logga2.png" alt="">
+        <img src="pics/logga2.png" alt="Wayne Enterprise's logo">
     </footer>
 </div>
 </body>
