--- a/goals.html
+++ b/goals.html
@@ -15,6 +15,7 @@
         <div class="coverUp"><i class="fas fa-bars"></i></div>
     
         <nav class="sekundärNav">
+            <img src="pics/logga2.png" alt="Wayne Enterprise's logo">
             <div class="navItemF">
                 <div class="navTitle">
                     <a href="index.html">Home</a>
@@ -37,7 +38,7 @@
                     Business <i class="fas fa-angle-double-down"></i>
                 </div> 
                 <ul class="aboutList">
-                    <li><a href="businesses.html">The Wayne Enterprise Family</a></li>
+                    <li><a href="businesses.html">The Wayne E. Family</a></li>
                     <li><a href="joblistings.html">Join us</a></li>
                 </ul>
             </div>
@@ -45,11 +46,11 @@
     </aside> 
 <div class="body">
     <div class="mellan background">
-        <img src="pics/cityBackground.jpg" alt="" >
+        <img src="pics/cityBackground.jpg" alt="Background">
     </div>
     
     <header>
-        <img src="pics/logga2.png" alt="">
+        <img src="pics/logga2.png" alt="Wayne Enterprise's logo">
         <div>
             <h1>Wayne Enterprises</h1>
             <h3>The future is built as one</h3>
@@ -104,10 +105,10 @@
             Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nam sit voluptates maxime eos quia nesciunt est! Laudantium, repellendus quod ullam quis optio fugit placeat natus non laborum unde, sapiente voluptatibus?
         </section>
         <section class="gray midRight image unsaturate">
-            <img src="pics/cleanEnergy.jpg" alt="">
+            <img src="pics/cleanEnergy.jpg" alt="Windturbines overlooking a field">
         </section>
         <section class="gray fill image unsaturate">
-            <img src="pics/goals1.jpg" alt="">
+            <img src="pics/goals1.jpg" alt="Happy children">
         </section>
         <section class="light midLeft">
             <P>
@@ -119,7 +120,7 @@
         </P>
         </section>
         <section class="dark right image unsaturate">
-            <img src="pics/goals2.jpg" alt="">
+            <img src="pics/goals2.jpg" alt="An interconnected city">
         </section>
         <section class="gray mid">
             We do not strive for efficiency, we strive for security of results. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nobis ab, id aut esse et sed consequuntur, voluptate optio ducimus repellendus consectetur mollitia odit distinctio amet numquam dignissimos explicabo dolorum dolores!
@@ -159,7 +160,7 @@
                 <li><a href=""></a></li>
             </ul>
         </div>
-        <img src="pics/logga2.png" alt="">
+        <img src="pics/logga2.png" alt="Wayne Enterprise's logo">
     </footer>
 </div>
 </body>
