--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div class="coverUp"><i class="fas fa-bars"></i></div>
     
         <nav class="sekundärNav">
-            <img src="pics/logga2.png" alt="">
+            <img src="pics/logga2.png" alt="Wayne Enterprise's logo">
             <div class="navItemF">
                 <div class="navTitle">
                     <a href="index.html">Home</a>
@@ -48,11 +48,11 @@
     </aside> 
 <div class="body">
     <div class="mellan background">
-        <img src="pics/cityBackground.jpg" alt="" >
+        <img src="pics/cityBackground.jpg" alt="Background" >
     </div>
     
     <header>
-        <img src="pics/logga2.png" alt="">
+        <img src="pics/logga2.png" alt="Wayne Enterprise's logo">
         <div>
             <h1>Wayne Enterprises</h1>
             <h3>The future is built as one</h3>
@@ -148,7 +148,7 @@
                 <li><a href=""></a></li>
             </ul>
         </div>
-        <img src="pics/logga2.png" alt="">
+        <img src="pics/logga2.png" alt="Wayne Enterprise's logo">
     </footer>
 
 
@@ -157,7 +157,7 @@
 
 
 <div id="referenceWrapper">
-    <img src="pics/bat.png" id="batmanReference" alt="">
+    <img src="pics/bat.png" id="batmanReference" alt="Nananananananana">
 </div>
 </body>
 </html>
