Finished up everything. Checked code, worked on responsivity

--- a/404.html
+++ b/404.html
@@ -10,6 +10,43 @@
     <script src="https://kit.fontawesome.com/81c14f1bdd.js" crossorigin="anonymous" defer></script>
 </head>
 <body>
-  <article> Whoops, this site is under construction. 404 </article
+    <header>
+        <img src="pics/logga2.png" alt="Wayne Enterprise's logo">
+        <div>
+            <h1>Wayne Enterprises</h1>
+            <h3>The future is built as one</h3>
+        </div>
+    </header>
+    <nav>
+        <div class="navItem">
+            <div class="navTitel">
+                <a href="index.html">Home</a>
+            </div>
+        </div>
+
+        <div class="navItem">
+            <div class="navTitel">
+                About <i class="fas fa-angle-double-down"></i>
+            </div> 
+            <ul class="navLista">
+                <li><a href="founder.html">Our founders</a></li>
+                <li><a href="ceo.html">Our CEO</a></li>
+                <li><a href="goals.html">Our goals</a></li>
+            </ul>
+        </div>
+
+        <div class="navItem">
+            <div class="navTitel">
+                Business <i class="fas fa-angle-double-down"></i>
+            </div> 
+            <ul class="navLista">
+                <li><a href="businesses.html">The Wayne Enterprise Family</a></li>
+                <li><a href="joblistings.html">Join us</a></li>
+            </ul>
+        </div>
+    </nav>
+    <article class="fourOfour"> 
+      This site is currently unavailable. Return to the hompage <i><a href="index.html">here</a></i> 
+    </article>
 </body>
 </html>
